tests/conformance/typecheck/invalid/type_mismatch_arithmetic.ks
// Type mismatch: cannot add Int and Bool
val x = 1 + True
